--- a/frontend/my-app/package.json
+++ b/frontend/my-app/package.json
@@ -25,7 +25,9 @@
     "cmdk": "^1.0.0",
     "lucide-react": "^0.473.0",
     "next": "14.2.16",
+    "next-auth": "^5.0.0-beta.25",
     "react": "^18",
+    "react-auth-kit": "^3.1.3",
     "react-dom": "^18",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
