--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "dotenv": "^16.5.0",
     "lucide-react": "^0.473.0",
     "next": "14.2.16",
     "next-auth": "^5.0.0-beta.25",
